Update spec; work on making server match it
