# server/server.py
@@ -11,6 +11,8 @@ app.config['SQLALCHEMY_DATABASE_URI'] = 'sqlite:///db.sqlite3'
 
 db = SQLAlchemy(app)
 
+#### Models
+
 class User(db.Model):
     id = db.Column(db.Integer, primary_key=True)
     token = db.Column(db.Text, nullable=False)
@@ -22,92 +24,135 @@ class Announcement(db.Model):
     text = db.Column(db.Text, nullable=True)
     time = db.Column(db.Integer, nullable=False)
 
+#### Routes
+
 @app.route('/')
-def hello_world():
-    return 'Hello, World!'
+def root():
+    return 'Api Root'
 
-def get_events():
-    return []
-
+## Login
 @app.route('/login', methods=['POST'])
 def login():
-    r = requests.post(url="https://my.bit.camp/api/auth/sign_in", data=request.json)
-    return (r.content.data, r.status_code, {"uid": r.headers['uid'], "access-token": r.headers['access-token'], "client": r.headers['client'], "Content-Type": "application/json"})
+    data = request.get_json()
+    if ('email' not in data) or ('password' not in data):
+        return "Invalid body", 400
 
-@app.route('/login/scanner', methods=['POST'])
-def login_scanner():
-    r = requests.post(url="https://my.bit.camp/api/auth/sign_in", data=request.json)
-    return (r.content, r.status_code, {"uid": r.headers['uid'], "access-token": r.headers['access-token'], "client": r.headers['client'], "Content-Type": "application/json"})
+    #r = requests.post(url="https://my.bit.camp/api/auth/sign_in", data=request.json)
+    #return (r.content.data, r.status_code, {"uid": r.headers['uid'], "access-token": r.headers['access-token'], "client": r.headers['client'], "Content-Type": "application/json"})
+    return jsonify([])
+
+@app.route('/login/admin', methods=['POST'])
+def login_admin():
+    data = request.get_json()
+    if ('email' not in data) or ('password' not in data):
+        return "Invalid body", 400
+
+    return jsonify([])
 
 
-# Returns JSON with events.
-# Mirrors https://my.bit.camp/events.json
+## Announce
+@app.route('/announce', methods=['GET', 'POST', 'PUT', 'DELETE'])
+def announce():
+    if request.method == "GET":
+        return jsonify([])
+    elif request.methid == "POST":
+        data = request.get_json()
+        if ('title' not in data) or ('body' not in data):
+            return "Invalid body", 400
+    elif request.method == "PUT":
+        data = request.get_json()
+        if ('email' not in data) or ('password' not in data):
+            return "Invalid body", 400
+        if 'id' not in request.args:
+            return "Invalid params", 400
+    elif request.method == "DELETE":
+        if 'id' not in request.args:
+            return "Invalid params", 400
+    return jsonify([])
+
+@app.route('/announce/subscribe')
+def announce_subscribe():
+    data = request.get_json()
+    if 'token' not in data:
+        return "Invalid body", 400
+    return jsonify([])
+
+## Entry
+@app.route('/entry/checkin', methods=['POST'])
+def entry_checkin():
+    data = request.get_json()
+    if 'email' not in data:
+        return "Invalid body", 400
+    return jsonify([])
+
+@app.route('/entry/nfc-pair', methods=['POST'])
+def entry_nfc():
+    data = request.get_json()
+    if ('email' not in data) or ('nfc' not in data):
+        return "Invalid body", 400
+    return jsonify([])
+
+## Events
 @app.route('/events')
 def get_events():
     return jsonify([])
 
-# Returns hashed string of data from /events
 @app.route('/events/hash')
-def get_events_hash():
+def get_events():
+    return ""
+
+@app.route('/events/follow', methods=['POST'])
+def follow_event():
     return jsonify([])
 
-# Takes an event ID and an access token, favorites an event
-@app.route('/events/favorite', methods=['POST'])
-def post_events_favorite():
+@app.route('/events/unfollow', methods=['POST'])
+def follow_event():
     return jsonify([])
 
-# Takes an event ID and an access token, unfavorites an event
-@app.route('/events/unfavorite', methods=['POST'])
-def post_events_unfavorite():
+@app.route('/events/following-count')
+def get_events_count():
     return jsonify([])
 
-# Gets a count of all favorites
-@app.route('/events/favorite_count')
-def get_events_favorite_count():
+@app.route('/events/following')
+def get_events_following():
     return jsonify([])
 
-# Given an access token,
-@app.route('/events/my_favorites')
-def get_events_favorite():
+@app.route('/events/checkin', methods=['POST'])
+def event_checkin():
     return jsonify([])
 
-#### Announcement endpoints
-
-@app.route('/announcements')
-def get_announcements():
-    return jsonify(Announcement.query.all())
-
-@app.route('/announcements/create', methods=['POST'])
-def post_announcement_create():
+## Mentorship
+@app.route('/mentorship')
+def get_questions():
     return jsonify([])
 
-@app.route('/announcements/:id/update', methods=['PATCH'])
-def post_announcement_update():
+@app.route('/mentorship/submit', methods=['POST'])
+def post_question():
     return jsonify([])
 
-@app.route('/announcements/:id/delete', methods=['DELETE'])
-def post_announcement_delete():
+@app.route('/mentorship/claim', methods=['POST'])
+def claim_question():
     return jsonify([])
 
-# Get token and email
-@app.route('/announcements/subscribe', methods=['POST'])
-def postToken():
-    data = request.get_json()
-    token = data['token']
-    email = data['email']
-    user = User(token=token, email=email)
-    db.session.add(user)
-    db.session.commit()
-    return jsonify({'added' : email})
-
-def getAllTokens():
-    tokens = []
-    for u in User.query.with_entities(User.token).all():
-        tokens.append(list(u)[0])
-    return tokens
-
-def getToken(email):
-    return User.query.filter_by(email=email).first().token
+## Get token and email
+#@app.route('/announcements/subscribe', methods=['POST'])
+#def postToken():
+#    data = request.get_json()
+#    token = data['token']
+#    email = data['email']
+#    user = User(token=token, email=email)
+#    db.session.add(user)
+#    db.session.commit()
+#    return jsonify({'added' : email})
+#
+#def getAllTokens():
+#    tokens = []
+#    for u in User.query.with_entities(User.token).all():
+#        tokens.append(list(u)[0])
+#    return tokens
+#
+#def getToken(email):
+#    return User.query.filter_by(email=email).first().token
 
 if __name__ == '__main__':
     db.create_all()
